// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`missing site argument 1`] = `
"

 Missing required argument: site 

 calibre site pages [options]

Print a list of pages for a given site

Options:

  --help     Show help                                                 [boolean]
  --version  Show version number                                       [boolean]
  --site     The identifying slug of a site                  [string] [required]
  --count    The number of records to return, maximum: 500         [default: 25]
  --cursor   The cursor to fetch records after
  --json     Output in JSON format"
`;

exports[`missing site argument value 1`] = `
"

 Not enough arguments following: site 

 calibre site pages [options]

Print a list of pages for a given site

Options:

  --help     Show help                                                 [boolean]
  --version  Show version number                                       [boolean]
  --site     The identifying slug of a site                  [string] [required]
  --count    The number of records to return, maximum: 500         [default: 25]
  --cursor   The cursor to fetch records after
  --json     Output in JSON format"
`;
